Mon Jan 29 01:35:56 2007  Jiri (George) Lebl <jirka@5z.com>

	* src/funclib.c, src/matrixw.c: DiagonalOf now returns a column
	  vector

	* lib/equation_solving/formulas.gel: Add QuarticFormula and use it in
	  PolynomialRoots.  Also return column vectors from QuadraticFormula,
	  CubicFormula

	* lib/linear_algebra/linear_algebra.gel: add support for 4x4 matrices
	  in Eigenvalues and always return column vector from that function

	* src/gnome-genius.c: add Next/Previous Tab menu item and accelerator

	* src/longtest.gel: test the quartic

	* help/C/gel-matrix-support.xml, help/C/gel-polynomials.xml,
	  help/C/gel-function-list.xml: Update the documentation

2007-01-24  Pema Geyleg  <pema.geyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS.

Sat Jan 20 00:14:49 2007  Jiri (George) Lebl <jirka@5z.com>

	* help/C/gel-function-list.gel: fix unbalanced para

Sat Jan 20 00:08:18 2007  Jiri (George) Lebl <jirka@5z.com>

	* lib/linear_algebra/linear_algebra.gel: Fix spelling, it's
	  RayleighQuotient

	* lib/linear_algebra/linear_algebra.gel,
	  lib/equation_solving/formulas.gel:  Fixup CubicFormula to work
	  correctly with complex coefficients and implement Eigenvalues
	  for 3 by 3 matrices.

	* help/C/gel-function-list.xml, help/C/genius.xml: add a bunch of
	  documentation to the function list and Planetmath and Mathworld
	  links.

	* src/geniustests.txt, src/longtest.gel: add tests

	* add missing files to subversion

Fri Jan 19 21:34:49 2007  Jiri (George) Lebl <jirka@5z.com>

	* lib/linear_algebra/linear_algebra.gel: add IsPositiveDefinite
	  and IsPositiveSemidefinite

	* src/geniustests.txt: add tests

	* help/C/gel-function-list.xml: update for the above

Sat Sep 02 11:27:01 2006  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: add undo/redo capability

	* configure.in: raise version

Mon Aug 28 12:47:44 2006  Jiri (George) Lebl <jirka@5z.com>

	* src/plugin.c, src/plugread.c, src/Makefile.am:  Fix plugin reading.