@@ -3780,6 +3780,8 @@ do (
 	    vector of coefficients.  That is
 	    <userinput>4*x^3 + 2*x + 1</userinput> corresponds to the vector
             <userinput>[1,2,0,4]</userinput>.
+	    Returns a column vector of the three solutions.  The first solution is always
+	    the real one as a cubic always has one real solution.
 	  </para>
           <para>
 	    See
@@ -3850,6 +3852,7 @@ do (
 	    vector of coefficients.  That is
 	    <userinput>4*x^3 + 2*x + 1</userinput> corresponds to the vector
             <userinput>[1,2,0,4]</userinput>.
+	    Returns a column vector of the solutions.
 	  </para>
 	  <para>
 	    The function calls
@@ -3870,6 +3873,7 @@ do (
 	    vector of coefficients.  That is
 	    <userinput>3*x^2 + 2*x + 1</userinput> corresponds to the vector
             <userinput>[1,2,3]</userinput>.
+	    Returns a column vector of the two solutions.
 	  </para>
           <para>
 	    See
@@ -3889,6 +3893,7 @@ do (
 	    vector of coefficients.  That is
 	    <userinput>5*x^4 + 2*x + 1</userinput> corresponds to the vector
             <userinput>[1,2,0,0,5]</userinput>.
+	    Returns a column vector of the four solutions.
 	  </para>
           <para>
 	    See
