@@ -3,8 +3,8 @@ Changes to 0.7.7
 * Add IsPositiveDefinite, IsPositiveSemidefinite, QuarticFormula
 * SEMANTICS: QuadraticFormula, CubicFormula, Eigenvalues, and DiagonalOf
   now consistently return a column vector
-* Fix CubicFormula for complex coefficients, and use QuarticFormula
-  in PolynomialRoots
+* Fix CubicFormula for complex coefficients and better handle real roots,
+  and use QuarticFormula in PolynomialRoots
 * Eigenvalues now computes eigenvalues for 3x3 and 4x4 matrices
 * Add undo/redo capability
 * CHANGE: It's RayleighQuotient not RaleighQuotient
